syntax = "proto3";
package checkpoint;
option go_package = "github.com/bptlab/cepta/models/events/checkpoint";
option java_package = "org.bptlab.cepta.models.events.checkpoint";
option java_outer_classname = "CheckpointDataProtos";

import "google/protobuf/timestamp.proto";

message CheckpointData {
    int64 train_id = 1;
    google.protobuf.Timestamp prod_date = 2;
    string station_abbreviation = 3;

    google.protobuf.Timestamp event_arrival_time = 4;
    int64 arrival_delay = 5;
    int64 arrival_status = 6;

    google.protobuf.Timestamp event_departure_time = 7;
    int64 departure_delay = 8;
    int64 departure_status = 9;

    bool start_station = 10;
    bool end_station = 11;
    int64 country_id = 12;
    string train_trip_type = 13;
    string train_wagon_type = 14;
    bool turn_train_at_departure = 15;
    bool turn_train_at_arrival = 16;
    bool turn_train = 17;
    bool crew_change = 18;
    bool locomotive_change = 19;
    bool wagon_dec = 20;
    bool wagon_inc = 21;
    bool wagon_switch = 22;
    bool wagon_check_at_depature = 23;
    bool wagon_check_at_arrival = 24;
    int64 trip_seq_nr = 25;
    google.protobuf.Timestamp start_date = 26;
    int64 start_country_id = 27;

}