syntax = "proto3";
package models.grpc;
option go_package = "github.com/bptlab/cepta/models/grpc/replayer";
option java_package = "org.bptlab.cepta.models.grpc.replayer";

import "google/protobuf/timestamp.proto";
import "models/constants/Topic.proto";
import "models/events/Event.proto";

service Replayer {

  // Basic controls
  rpc SeekTo(google.protobuf.Timestamp) returns (Success) {}
  rpc Reset(Empty) returns (Success) {}
  rpc Start(ReplayStartOptions) returns (Success) {}
  rpc Stop(Empty) returns (Success) {}

  // Configuration
  rpc SetSpeed(Speed) returns (Success) {}
  rpc SetType(ReplayModeOption) returns (Success) {}
  rpc SetOptions(ReplaySetOptionsRequest) returns (Success) {}

  // Query
  rpc GetStatus(Empty) returns (ReplayStatus) {}
  rpc GetOptions(Empty) returns (ReplayStartOptions) {}

  // Custom querying for internal testing infrastructure
  rpc Query(QueryOptions) returns (stream ReplayedEvent) {}
}

enum InternalControlMessageType {
  RESET = 0;
  SEEK = 1;
  SHUTDOWN = 2;
  START = 3;
  STOP = 4;
}

enum ReplayMode {
  // Proportional is default
  PROPORTIONAL = 0;
  CONSTANT = 1;
}

message ReplayModeOption {
  ReplayMode mode = 1;
}

message Speed {
  int32 speed = 1;
}

message ReplayStatus {
  bool active = 1;
}

message Timerange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message ReplayOptions {
  Speed speed = 1;
  ReplayMode mode = 2;
  Timerange timerange = 3;
  int32 limit = 5;
  int32 offset = 6;
  bool repeat = 7;
}

message ActiveReplayOptions {
  models.constants.Topic source = 1; // For mapping
  Speed speed = 2;
  ReplayMode mode = 3;
  Timerange timerange = 4;
  bool repeat = 5;
}

message ReplaySetOptionsRequest {
  repeated ActiveReplayOptions sources = 1;
  ActiveReplayOptions options = 2;
}

message SourceQueryOptions {
  models.constants.Topic source = 1;  // For mapping
  repeated string ids = 2;
  ReplayOptions options = 3;
}

message ReplayStartOptions {
  repeated SourceQueryOptions sources = 1;
  ReplayOptions options = 2;
}

message QueryOptions {
  repeated SourceQueryOptions sources = 1;
}

message Empty {}

message Success {
  bool success = 1;
}

message ReplayedEvent {
  google.protobuf.Timestamp replay_timestamp = 1;
  models.events.Event event = 2;
};